<resources>
    <string name="app_name">قیمت طلا و ارز</string>
    <string name="splash_logo">Splash_logo</string>
    <string name="SplashMainText">قیمت طلا و ارز</string>
    <string name="SplashDescriptionText">تازه ترین اخبار ارز و طلای جهان</string>
    <string name="back_top_main">back top main</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gold_icons">gold_icons</string>
    <string name="currency_icon">currency icon</string>
    <string name="internet_problem1">
        خطا در دریافت اطلاعات
    </string>
    <string name="internet_problem2">
        اتصال اینترنت خود را بررسی کنید
    </string>
    <string name="try_again">تلاش دوباره</string>
    <string name="internet_setting">تنظیمات اینترنت</string>
    <string name="help_icon">help icon</string>
    <string name="wrong_date">تاریخ و ساعت اشتباهه؟</string>
    <string name="wrong_date_explanation">این ممکنه بخاطر اشتباه تنظیم شدن تاریخ و ساعت موبایل باشه از قسمت تنظیمات میتونی برطرفش کنی</string>
    <string name="failed_resolve_data_message">در دریافت اطلاعات ناموفق بودیم</string>
    <string name="privacy_title">حریم خصوصی و اطلاعات</string>
    <string name="privacy_message">
    با استفاده از این اپلیکیشن، شما به شرایط زیر رضایت می‌دهید و تأیید می‌کنید که آن‌ها را مطالعه کرده‌اید:\n
    \n
    هدف استفاده از اپلیکیشن\n
    این برنامه صرفاً با هدف اطلاع‌رسانی قیمت لحظه‌ای طلا، سکه، ارز و دیگر آیتم‌های مرتبط طراحی شده است. کاربران محترم موظف‌اند از اپلیکیشن تنها در همین راستا استفاده کنند و مسئولیت هرگونه استفاده‌ی خارج از این چارچوب، بر عهده‌ی خود کاربر خواهد بود.\n
    \n
    رعایت حقوق کاربران\n
    حفظ حقوق و رضایت کاربران، از اولویت‌های اصلی ماست. اپلیکیشن به گونه‌ای طراحی شده تا با ساده‌ترین رابط کاربری، تجربه‌ای آسان و سریع فراهم کند. همچنین این نسخه از برنامه کاملاً رایگان و بدون تبلیغات می‌باشد.\n
    \n
    اعتبار و دقت اطلاعات ارائه شده\n
    قیمت‌های نمایش‌داده‌شده در اپلیکیشن، تا حد امکان به‌صورت لحظه‌ای به‌روز می‌شوند. با این حال، این اطلاعات نمی‌توانند مبنای قطعی برای تصمیم‌گیری‌های مالی یا سرمایه‌گذاری باشند. توصیه می‌شود برای اطلاع دقیق و قابل اتکا، حتماً از منابع رسمی و معتبر استفاده نمایید.\n
    \n
    منبع اطلاعات قیمت‌ها\n
    تمامی اطلاعات و قیمت‌های ارائه‌شده در اپلیکیشن، از وب‌سرویس رایگان زیر دریافت می‌گردد:\n
    https://brsapi.ir/free-api-gold-currency-webservice/\n
    مسئولیت صحت نهایی داده‌ها بر عهده منبع اصلی بوده و تیم توسعه اپلیکیشن، تنها نقش انتقال‌دهنده اطلاعات را دارد.
</string>
    <string name="acceptation">موارد بالا را مطالعه و میپذیرم</string>
    <string name="enter_app">ورود به برنامه</string>

</resources>