<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/splash_logo"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/sans_fa_name_bold"
        android:gravity="center"
        android:text="@string/SplashMainText"
        android:textColor="@color/splash_gold"
        android:textDirection="rtl"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/SplashDescriptionText"
        android:fontFamily="@font/sans_fa_name_regular"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="26sp" />

</LinearLayout>